Elixir! Node test runner and editor niceties

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "type": "module",
     "scripts": {
         "debug": "node --inspect-brk",
-        "01": "node src/01.js"
+        "test": "node --test"
     }
 }
